# moly

./: Cargo.toml
moly-backend/: Cargo.toml
moly-backend/src/: lib.rs
moly-backend/src/backend_impls/: api_server.rs  mod.rs
moly-backend/src/controllers/: download.rs  download_files.rs  mod.rs  model_cards.rs
moly-backend/src/models/: download_files.rs  mod.rs  model_cards.rs  models.rs
moly-backend/src/services/: api_server.rs  chat_ui.rs  mod.rs
moly-backend/src/store/: mod.rs  model_cards.rs  remote.rs
moly-backend/src/utils/: sqlite.rs
moly-client/: Cargo.toml
moly-fake-backend/src/: fake_data.rs  lib.rs
moly-protocol/: Cargo.toml
moly-protocol/src/: data.rs  open_ai.rs  protocol.rs
moly-runner/: Cargo.toml
moly-server/: Cargo.toml
moly-server/src/: lib.rs
moly-server/src/backend_impls/: api_server.rs  chat_ui.rs  mod.rs
moly-server/src/controllers/: download.rs  download_files.rs  downloads.rs  mod.rs  model_cards.rs
moly-server/src/legacy/: llama_api_server.rs  mod.rs
moly-server/src/models/: download_files.rs  downloads.rs  mod.rs  model_cards.rs
moly-server/src/services/: api_server.rs  llama_api_server.rs  mod.rs
moly-server/src/store/: download.rs  download_files.rs  index.rs  mod.rs  model_cards.rs  models.rs  remote.rs
moly-server/src/utils/: sqlite.rs
packaging/: Info.plist
src/capture/: mod.rs
src/capture/platform/: mod.rs  unsupported.rs
src/chat/: chat_panel.rs
src/data/: preferences.rs  store.rs
src/landing/: download_item.rs  model_files_item.rs
src/my_models/: downloaded_files_row.rs
src/shared/: actions.rs  download_notification_popup.rs
(+9 files in other folders)
