[package]
name = "moly-server"
version = "0.1.0"
edition = "2021"

[dependencies]
moly-protocol = { path = "../moly-protocol" }

anyhow = "1.0"
chrono = "0.4"
crossbeam = "0.8"
env_logger = "0.11.6"
futures-util = "0.3.31"
log = "0.4.25"
reqwest = { version = "0.12.12", features = ["blocking", "stream", "json"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.12.1", features = ["v4", "fast-rng"] }

[dependencies.wasmedge-sdk]
version = "0.14.0"
default-features = false
features = ["wasi_nn"]

[dependencies.git2]
version = "0.20.0"
features = ["vendored-libgit2", "vendored-openssl"]
